--- a/index.html
+++ b/index.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head> 
-	
-	
-  <script src="jquery.js" type="text/javascript" charset="utf-8"></script>
-  <script src="jquery.tmpl.js" type="text/javascript" charset="utf-8"></script>
-	<script src="spine.tmpl.js" type="text/javascript" charset="utf-8"></script>
-  <script src="spine.min.js" type="text/javascript" charset="utf-8"></script>
-  <script src="spine.route.js" type="text/javascript" charset="utf-8"></script>
-  <script src="jquery.bitlydfd.js" type="text/javascript"></script>
-<script src="spine.model.local.js" type="text/javascript" charset="utf-8"></script>
+	<title>ShorterUrl</title>	
+  	<script src="js/jquery-1.5.2.min.js" type="text/javascript" charset="utf-8"></script>
+  	<script src="js/jquery.tmpl.js" type="text/javascript" charset="utf-8"></script>
+	<script src="js/spine.tmpl.js" type="text/javascript" charset="utf-8"></script>
+  	<script src="js/spine.min.js" type="text/javascript" charset="utf-8"></script>
+  	<script src="js/spine.route.js" type="text/javascript" charset="utf-8"></script>
+  	<script src="js/jquery.bitlydfd.js" type="text/javascript"></script>
+	<script src="js/spine.model.local.js" type="text/javascript" charset="utf-8"></script>
 
-
-<link rel="stylesheet" type="text/css" href="application.css"/>
+	<link rel="stylesheet" type="text/css" href="css/application.css"/>
 
 
   <script type="text/javascript" charset="utf-8">
