adding temporary simple return to edit mode option

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@ jQuery(function($){
 	<script type="text/x-jquery-tmpl" id="clicksTemplate">
 		<div class="clicksView">
 		 <h2>Click Statistics</h2>
-			<span><strong>Short URL: </strong> ${name}</span>
+			<span><strong>Short URL: </strong> ${name} (<a href="index.html">Edit Mode</a>)</span>
 			<div class="clicksInfo"></div>
 		</div>
 	</script>
