--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 	<script src="js/spine.tmpl.js" type="text/javascript" charset="utf-8"></script>
   	<script src="js/spine.min.js" type="text/javascript" charset="utf-8"></script>
   	<script src="js/spine.route.js" type="text/javascript" charset="utf-8"></script>
+  	<script src="js/json.js" type="text/javascript" charset="utf-8"></script>
+  	<script src="js/store.min.js" type="text/javascript" charset="utf-8"></script>
   	<script src="js/jquery.bitlydfd.0.1.js" type="text/javascript"></script>
 	<script src="js/spine.model.local.js" type="text/javascript" charset="utf-8"></script>
 
