adding authors notice

--- a/index.html
+++ b/index.html
@@ -75,5 +75,8 @@
     <div id="stats">
     </div>
   </div>
+  <div class="footer">
+  	A demo by <a href="http://twitter.com/addyosmani">@addyosmani</a> and <a href="http://twitter.com/maccman">@maccman</a>.
+  </div>
 </body>
 </html>
