fix path to json.js

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <link rel="stylesheet" href="css/application.css" type="text/css" charset="utf-8">
 
-  <script src="lib/json2.js" type="text/javascript" charset="utf-8"></script>
+  <script src="lib/json.js" type="text/javascript" charset="utf-8"></script>
   <script src="lib/jquery.js" type="text/javascript" charset="utf-8"></script>
   <script src="lib/jquery.tmpl.js" type="text/javascript" charset="utf-8"></script>
   <script src="lib/jquery.bitly.js" type="text/javascript" charset="utf-8"></script>
