--- a/index.html
+++ b/index.html
@@ -3,17 +3,21 @@
 <head>
   <link rel="stylesheet" href="css/application.css" type="text/css" charset="utf-8">
 
-  <script src="lib/json2.js" type="text/javascript" charset="utf-8"></script>
-  <script src="lib/jquery.js" type="text/javascript" charset="utf-8"></script>
-  <script src="lib/jquery.tmpl.js" type="text/javascript" charset="utf-8"></script>
-  <script src="lib/jquery.bitly.js" type="text/javascript" charset="utf-8"></script>
-  <script src="lib/store.min.js" type="text/javascript" charset="utf-8"></script>
-  <script src="lib/spine.js" type="text/javascript" charset="utf-8"></script>
-  <script src="lib/spine.model.local.js" type="text/javascript" charset="utf-8"></script>
-  <script src="lib/spine.controller.manager.js" type="text/javascript" charset="utf-8"></script>
-  <script src="lib/spine.route.js" type="text/javascript" charset="utf-8"></script>
-  <script src="app/models/url.js" type="text/javascript" charset="utf-8"></script>
-  <script src="app/application.js" type="text/javascript" charset="utf-8"></script>
+  <script src="lib/LAB.min.js" type="text/javascript" charset="utf-8"></script>
+  <script type="text/javascript">
+	$LAB
+	.script("lib/json.js")
+	.script("lib/jquery.js")
+	.script("lib/jquery.tmpl.js")
+	.script("lib/jquery.bitly.js")
+	.script("lib/store.min.js")
+	.script("lib/spine.js")
+	.script("lib/spine.model.local.js")
+	.script("lib/spine.controller.manager.js")
+	.script("lib/spine.route.js")
+	.script("app/models/url.js")
+	.script("app/application.js");
+  </script>
   
   <script type="text/x-jquery-tmpl" id="urlTemplate">
     <div class="item">
