adding overflow fixes

--- a/index.html
+++ b/index.html
@@ -33,9 +33,12 @@
             Generating...
           {{/if}}
         </span>
-      
+
+      <span class="iconPanel">
         <a class="toggleStats"></a>
         <a class="destroy"></a>
+      </span>
+
       </div>
     </div>
   </script>  
