patching Chrome 10 load issue on OSX due to LAB chain

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <script src="lib/LAB.min.js" type="text/javascript" charset="utf-8"></script>
   <script type="text/javascript">
 	$LAB
+	.setOptions({AlwaysPreserveOrder:true})
 	.script("lib/json.js")
 	.script("lib/jquery.js")
 	.script("lib/jquery.tmpl.js")
